More movies small tweeks and removed the scrollbar en flight bug fix

--- a/styles/Main.css
+++ b/styles/Main.css
@@ -14,6 +14,10 @@ html {
       #070a12;
 }
 
+html::-webkit-scrollbar {
+    display: none;
+}
+
 nav {
   display: flex;
   flex-wrap: wrap;
